--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 			rel="stylesheet"
 		/>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR78oyIq3w8XvrRhWfOkXyQFEkDEHaocbWL5xsjvQsu08XKsALmxyj8inQHdSXond2C1Jw&usqp=CAU" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
